# Proiect-de-programare-C-Sem.-2

./: CMakeLists.txt
app1/: app1.cpp
app2/: app2.cpp
shared/data/: Absenta.cpp  Absenta.h  Data.cpp  Data.h  Elev.cpp  Elev.h  Materie.cpp  Materie.h  Nota.cpp  Nota.h  UsefulFunctions.cpp  UsefulFunctions.h
shared/files/: absente.txt  elevi.txt
